--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Menu.SigninActivity"></activity>
+        <activity android:name=".Menu.TambahMatkulActivity"></activity>
+        <activity android:name=".Menu.MatkulActivity" />
+        <activity android:name=".Menu.SigninActivity" />
         <activity android:name=".Menu.LoginDosenActivity" />
         <activity android:name=".Menu.HomeActivity">
             <intent-filter>
