--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Menu.ListNilaiActivity"></activity>
         <activity android:name=".Menu.ViewPager" />
         <activity android:name=".Menu.TokenActivity" />
         <activity android:name=".Menu.MatkulActivity" />
