Mengupdate tampilan dan menambah Timer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Menu.ListNilaiActivity"></activity>
-        <activity android:name=".Menu.ViewPager" />
-        <activity android:name=".Menu.TokenActivity" />
-        <activity android:name=".Menu.MatkulActivity" />
-        <activity android:name=".Menu.TambahMatkulActivity" />
-        <activity android:name=".Menu.SigninActivity" />
-        <activity android:name=".Menu.LoginDosenActivity" />
-        <activity android:name=".Menu.SoalActivity" />
-        <activity android:name=".Menu.TambahSoalActivity" />
-        <activity android:name=".Menu.HomeActivity" />
-        <activity android:name=".Menu.JawabActivity" />
-        <activity android:name=".Menu.MhsLoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".Menu.ListNilaiActivity"
+            android:screenOrientation="portrait"></activity>
+        <activity android:name=".Menu.ViewPager"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.TokenActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.MatkulActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.TambahMatkulActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.SigninActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.LoginDosenActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.SoalActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.TambahSoalActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.HomeActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.JawabActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".Menu.MhsLoginActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
